# Hackathon-smart_city

./: CMakeLists.txt  ResourceConfig.qrc
Include/: mainwindow.h
Source/: main.cpp  mainwindow.cpp  mainwindow.ui
Widgets/BookTextWidget/: booktextwidget.cpp  booktextwidget.h  booktextwidget.ui
Widgets/GreetingWidget/: greetingwidget.cpp  greetingwidget.h  greetingwidget.ui
Widgets/LoadingWidget/: loadingwidget.cpp  loadingwidget.h  loadingwidget.ui
Widgets/MainMenuWidget/: mainmenuwidget.cpp  mainmenuwidget.h  mainmenuwidget.ui
Widgets/NadyaDialog1Widget/: nadyadialog1widget.cpp  nadyadialog1widget.h  nadyadialog1widget.ui
Widgets/NadyaDialog2Widget/: nadyadialog2widget.cpp  nadyadialog2widget.h  nadyadialog2widget.ui
Widgets/PurposesMenuInfoWidget/: purposesmenuinfowidget.cpp  purposesmenuinfowidget.h  purposesmenuinfowidget.ui
Widgets/PurposesMenuWidget/: purposesmenuwidget.cpp  purposesmenuwidget.h  purposesmenuwidget.ui
